# RustCMake

./: .travis.yml  CMakeLists.txt  Readme.md
cmake/: Findrustc.cmake  Findrustdoc.cmake  Rust.cmake
examples/: example1.rs  example2.rs
src/: lib.rs  other.rs
